<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">test</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="poids">Votre poids :</string>
    <string name="taille">Votre taille</string>
    <string name="metre">Mètre</string>
    <string name="centimetre">Centimètre</string>
    <string name="megafonction">Mégafonction</string>
    <string name="calcul">Calculez</string>
    <string name="raz">RAZ</string>

</resources>
