<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" 
    >

    <TextView
        android:id="@+id/textpoids"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poids" />
    
    <EditText
        android:id="@+id/poids"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_toRightOf="@id/textpoids"
        android:layout_alignParentRight="true"
        android:hint="@string/poids" />
    
    
    <TextView
        android:id="@+id/texttaille"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/poids"
        android:text="@string/taille" />
    
    <EditText
        android:id="@+id/taille"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/poids"
        android:inputType="numberDecimal"
        android:layout_toRightOf="@id/texttaille"
        android:layout_alignParentRight="true"
        android:hint="@string/taille" />
    
    <RadioGroup 
        android:id="@+id/group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/taille"
        android:orientation="horizontal" >
        
        <RadioButton
        android:id="@+id/radio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metre"
        android:checked="true" />
        
        <RadioButton
            android:id="@+id/radio2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/centimetre"
         />     
               
    </RadioGroup>
    
	<CheckBox 
	    android:id="@+id/mega"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/group"
    android:text="@string/megafonction"/>
	
	<Button 
	    android:id="@+id/calcul"
	android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/mega"
    android:text="@string/calcul"
	    />
	
	<Button 
	    android:id="@+id/raz"
	android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_toRightOf="@id/calcul"
    android:layout_below="@id/mega"
    android:text="@string/raz"
	    />
	
	 <TextView 
	android:id="@+id/message"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/calcul" 
    android:text="Résultat:"
  />
  <TextView 
    android:id="@+id/result"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:layout_below="@id/message" 
    android:text="Vous devez cliquer sur le bouton « Calculer l'IMC » pour obtenir un résultat."
  />
  
</RelativeLayout>
